# GenshinCalc

./: .gitignore  CMakeLists.txt
include/: Artifact.hh  Artifact_constants.hh  Calc.hh  Character.hh  Status.hh  StatusGenerator.hh  Weapon.hh
src/: Artifact.cc  Calc.cc  Character.cc  StatusGenerator.cc  Weapon.cc  main.cc
